--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-# SECURITY
-DJANGO_SECRET_KEY='django-insecure-9df+igxnu!9f62$u09e$i4*x)b92x344bhq(b-8p=4ag4@@5+*'
-DJANGO_DEBUG=True
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+
+SECRET_KEY='django-insecure-9df+igxnu!9f62$u09e$i4*x)b92x344bhq(b-8p=4ag4@@5+*'
+DEBUG=True
+ALLOWED_HOSTS=unichat-prod.up.railway.app,localhost,127.0.0.1
+PYTHONDONTWRITEBYTECODE=1
+PYTHONUNBUFFERED=1
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 # DATABASE (default: SQLite)
 # For PostgreSQL, uncomment and adjust:
@@ -11,14 +15,3 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 # DATABASE_PASSWORD=postgres
 # DATABASE_HOST=db
 # DATABASE_PORT=5432
-
-# REDIS (used by Django Channels)
-REDIS_HOST=redis
-REDIS_PORT=6379
-
-# DJANGO SETTINGS
-DJANGO_LANGUAGE_CODE=pt-br
-DJANGO_TIME_ZONE=UTC
-
-# EMAIL (for development)
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
