--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,14 @@
 # Core Django framework
 Django>=5.2,<5.3
-
-# ASGI server for Django (used instead of gunicorn)
 daphne>=4.1.0
-
-# Django Channels for WebSocket support
 channels>=4.1.0
-
-# Redis backend for Django Channels
 channels-redis>=4.2.0
-
-# Crispy Forms with Bootstrap 5 integration
 django-crispy-forms>=2.2
 crispy-bootstrap5>=0.7
-
-# For handling static/media files efficiently in production
 whitenoise>=6.6.0
-
-# If you use environment variables (common in Docker)
 python-dotenv>=1.0.1
+Pillow>=10.0
+
+# --- Database drivers ---
+# psycopg2-binary>=2.9  # for PostgreSQL
+# dj-database-url>=2.1  # parse DATABASE_URL easily from env
