Configuring changes for prod

--- a/.env
+++ b/.env
@@ -4,8 +4,7 @@ DEBUG=True
 ALLOWED_HOSTS=unichat-prod.up.railway.app,localhost,127.0.0.1
 PYTHONDONTWRITEBYTECODE=1
 PYTHONUNBUFFERED=1
-REDIS_HOST=redis
-REDIS_PORT=6379
+REDIS_URL=redis://redis:6379
 
 # DATABASE (default: SQLite)
 # For PostgreSQL, uncomment and adjust:
